some improvements made to the gamespeed

--- a/index.html
+++ b/index.html
@@ -13,19 +13,23 @@
 <body>
     
     <div id="container">
-        <!-- <div id="playZone"> -->
+        <div> <!--  id="playZone" -->
             <div id="world"></div>
             <div id="pacman"></div>
             <div id="ghost"></div>
-            <p id="finalText"></p>
-        <!-- </div> -->
-        <div class="table" id="pad">
-            <p>SCORE</p>
-            <p id="score">0</p>
         </div>
-        <div class="table">
-            <p>LIVES</p>
-            <p id="lives">3</p>
+        <div class="col-2">
+            <div class="table">
+                <div class="fields" id="pad">
+                    <p>SCORE</p>
+                    <p id="score">0</p>
+                </div>
+                <div class="fields">
+                    <p>LIVES</p>
+                    <p id="lives">3</p>
+                </div>
+            </div>
+            <p id="finalText">PLAY...</p>
         </div>
     </div>
 
