3 ghost chasing Pacman

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <div> <!--  id="playZone" -->
             <div id="world"></div>
             <div id="pacman"></div>
-            <div id="ghost"></div>
+            <div class ="ghost" id="ghost-brown"></div>
+            <div class ="ghost" id="ghost-pink"></div>
+            <div class ="ghost" id="ghost-red"></div>
         </div>
         <div class="col-2">
             <div class="table">
