2nd pacman added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <div id="container">
         <div> <!--  id="playZone" -->
             <div id="world"></div>
-            <div id="pacman"></div>
+            <div class = "pacman"></div>
+            <div class = "pacman"></div>
             <div class ="ghost" id="ghost-brown"></div>
             <div class ="ghost" id="ghost-pink"></div>
             <div class ="ghost" id="ghost-red"></div>
